Fix: z-index

--- a/src/app/shared/components/editor/editor.component.scss
+++ b/src/app/shared/components/editor/editor.component.scss
@@ -7,7 +7,7 @@ header
     gap: 0.2rem;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
     background-color: var(--secondary-color);
     padding-top: 1rem;
     padding-bottom: 1rem;
