--- a/src/app/shared/components/popup-menu/popup-menu.component.scss
+++ b/src/app/shared/components/popup-menu/popup-menu.component.scss
@@ -8,7 +8,7 @@
 
 .arrow
 {
-    z-index: 2;
+    z-index: 3;
     width: 21px;
     height: 21px;
     margin-left: 18px;
@@ -28,7 +28,7 @@
     margin-top: 1rem;
     width: max-content;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     box-shadow: 0 0 2rem 0.5rem var(--secondary-color);
 
     &::ng-deep > *
